# pynpm

./: .editorconfig  .git-blame-ignore-revs  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MAINTAINERS  MANIFEST.in  README.rst  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  examplesapp.rst  index.rst  installation.rst  make.bat  usage.rst
pynpm/: __init__.py  package.py  utils.py  version.py
tests/: conftest.py  test_pynpm.py
tests/jsdep/: package.json
tests/jspkg/: package.json
