# -*- coding: utf-8 -*-
#
# This file is part of PyNPM
# Copyright (C) 2017 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# PyNPM is free software; you can redistribute it and/or modify
# it under the terms of the Revised BSD License; see LICENSE file for
# more details.

[metadata]
name = pynpm
version = attr: pynpm.__version__
description = "Python interface to your NPM and package.json."
long_description = file: README.rst, CHANGES.rst
keywords = npm node package.json
license = BSD
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/pynpm
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    pytest-cache>=1.0
    pytest-invenio>=1.4.0
    Sphinx>=3
# Kept for backwards compatibility
docs =

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=pynpm --cov-report=term-missing
testpaths = tests pynpm
